force-app/main/default/objects/Immunization__c/fields/At_Birth__c.field-meta.xml
<CustomField>
    <fullName>At_Birth__c</fullName>
    <label>At Birth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>