force-app/main/default/objects/Immunization__c/fields/Intake__c.field-meta.xml
<CustomField>
    <fullName>Intake__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intake</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Immunizations</relationshipLabel>
    <relationshipName>Immunizations</relationshipName>
    <type>Lookup</type>
</CustomField>