force-app/main/default/objects/Immunization__c/fields/Table_By_Age__c.field-meta.xml
<CustomField>
    <fullName>Table_By_Age__c</fullName>
    <label>Table By Age</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Birth to 15 Months</fullName>
            </value>
            <value>
                <fullName>18 Months to 18 Years</fullName>
            </value>
            <value>
                <fullName>19 Years to 21 years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>