force-app/main/default/objects/Immunization__c/fields/Vaccine__c.field-meta.xml
<CustomField>
    <fullName>Vaccine__c</fullName>
    <label>Vaccine</label>
    <length>255</length>
    <type>Text</type>
</CustomField>