force-app/main/default/objects/Immunization__c/fields/X1_Mo__c.field-meta.xml
<CustomField>
    <fullName>X1_Mo__c</fullName>
    <label>1 Mo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>