force-app/main/default/objects/Immunization__c/fields/X2_Mos__c.field-meta.xml
<CustomField>
    <fullName>X2_Mos__c</fullName>
    <label>2 Mos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>