force-app/main/default/objects/Immunization__c/fields/X3_Mos__c.field-meta.xml
<CustomField>
    <fullName>X3_Mos__c</fullName>
    <label>3 Mos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>