force-app/main/default/objects/Immunization__c/fields/X6_Mos__c.field-meta.xml
<CustomField>
    <fullName>X6_Mos__c</fullName>
    <label>6 Mos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>